Adding min stability dev

--- a/composer.json
+++ b/composer.json
@@ -72,7 +72,7 @@
             "php-http/discovery": true
         }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true,
     "repositories": {
         "flux-pro": {
