--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "laravel/workos": "^0.1.0",
         "livewire/flux": "^2.0",
         "livewire/volt": "^1.6.7"
     },
